chore: include bin/cli.js for executables

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "type": "module",
   "files": [
-    "src"
+    "src",
+    "bin"
   ],
   "scripts": {
     "lint": "eslint . && npm run lint:lockfile",
