--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: install deps
+        run: npm ci --ignore-engines
       - name: release
         run: npx semantic-release
         env:
