feat: support CJS consumers

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
           node-version: '16'
       - name: install deps
         run: npm ci --ignore-engines
+      - name: build CJS artifacts
+        run: npm run build
       - name: release
         run: npx semantic-release
         env:
