fix: eslint ignores cjs/ dist dir and config

--- a/package.json
+++ b/package.json
@@ -132,7 +132,9 @@
     ]
   },
   "eslintIgnore": [
-    "coverage/**"
+    "coverage/**",
+    "cjs/**",
+    "rollup.config.mjs"
   ],
   "babel": {
     "plugins": [
