fix: cjs main entry point used .js extension wrongly

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "exports": {
     ".": {
-      "require": "./cjs/main.js",
+      "require": "./cjs/main.cjs",
       "import": "./src/main.js"
     }
   },
